# chainlit-mcp

./: .dockerignore  .env.sample  .gitignore  Dockerfile  LICENSE  README.md  config.toml  main.py  mcp_config.json  mcp_demo_server.py  mcp_order_server.py  mcp_user_server.py  migrate_to_uv.py  pyproject.toml  quick_start.sh  requirements.txt
.chainlit/: config.toml
prompt/: liver_tests.txt  liver_tests_no_followup.txt  oreka_faqs.txt  oreka_faqs_no_followup.txt
rag_source/oreka_faqs/: zendesk-2025-10-04T06-54-33.md
src/: chat_app.py  main.py  start.py
src/lib/: auth_manager.py  cl_llms.py  database.py  db_services.py  mcp_client.py  models.py  order_management_service.py  order_models.py  order_services.py  rag.py  user_profile.py
